--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,21 @@ http {
     keepalive_timeout  65;
 
     gzip on;
+    gzip_types text/plain
+               text/css
+               text/javascript
+               image/gif
+               image/jpeg
+               image/png
+               text/xml
+               application/xml
+               application/rss+xml
+               application/json
+               application/javascript
+               application/x-javascript
+               application/font-woff2
+               application/font-woff
+               application/font-tff;
 
     server {
         listen 80;
@@ -43,10 +58,12 @@ http {
 
         location /public {
             root /public/;
+            expires 7d;
         }
 
         location /storage {
             root /storage/;
+            expires 7d;
         }
 
         location / {
